--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 * {
   box-sizing: border-box;
 }
+
+/* Body */
+body {
+  background: #2d2013;
+  color: #fff;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0;
+}
+/* End Body */
