--- a/style.css
+++ b/style.css
@@ -10,3 +10,15 @@ body {
   margin: 0;
 }
 /* End Body */
+
+/* Container */
+.container {
+  margin: auto;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+/* End Container */
