--- a/style.css
+++ b/style.css
@@ -42,3 +42,24 @@ button {
 input[type="text"] {
   width: 300px;
 }
+/* End Flex container items */
+
+/* Search btn */
+.search-btn {
+  cursor: pointer;
+  border-left: 0;
+  border-radius: 0;
+
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+/* End Search btn */
+
+/* Random btn */
+.random-btn {
+  cursor: pointer;
+  margin-left: 10px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+/* End Random btn */
