--- a/style.css
+++ b/style.css
@@ -63,3 +63,22 @@ input[type="text"] {
   border-bottom-right-radius: 4px;
 }
 /* End Random btn */
+
+/* Media */
+@media (max-width: 800px) {
+  input[type="text"] {
+    width: 200px;
+  }
+}
+
+@media (max-width: 700px) {
+  input[type="text"] {
+    width: 200px;
+  }
+}
+
+@media (max-width: 500px) {
+  input[type="text"] {
+    width: 200px;
+  }
+}
