--- a/style.css
+++ b/style.css
@@ -66,19 +66,13 @@ input[type="text"] {
 
 /* Media */
 @media (max-width: 800px) {
-  input[type="text"] {
-    width: 200px;
-  }
 }
 
 @media (max-width: 700px) {
-  input[type="text"] {
-    width: 200px;
-  }
 }
 
 @media (max-width: 500px) {
   input[type="text"] {
-    width: 200px;
+    width: 100%;
   }
 }
