add style for the meals div in style.css file

--- a/style.css
+++ b/style.css
@@ -64,6 +64,14 @@ input[type="text"] {
 }
 /* End Random btn */
 
+/* Meals */
+.meals {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+/* End Meals */
 /* Media */
 @media (max-width: 800px) {
 }
