--- a/style.css
+++ b/style.css
@@ -149,13 +149,23 @@ input[type="text"] {
 /* End Meals */
 /* Media */
 @media (max-width: 800px) {
+  .meals {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media (max-width: 700px) {
+  .meals {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media (max-width: 500px) {
   input[type="text"] {
     width: 100%;
+  }
+
+  .meals {
+    grid-template-columns: 1fr;
   }
 }
