Add getRandomMeal functionality to app.js file

--- a/style.css
+++ b/style.css
@@ -158,6 +158,11 @@ input[type="text"] {
   .meals {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .meal {
+    height: 200px;
+    width: 200px;
+  }
 }
 
 @media (max-width: 500px) {
@@ -167,5 +172,10 @@ input[type="text"] {
 
   .meals {
     grid-template-columns: 1fr;
+  }
+
+  .meal {
+    height: 300px;
+    width: 300px;
   }
 }
